refactor(GameRecordsTest): Arrays.asList() -> List.of() 변경